--- a/prepros-6.config
+++ b/prepros-6.config
@@ -76,6 +76,12 @@
         "#source/scss/content.scss",
         "#source/scss/footer.scss"
       ]
+    },
+    {
+      "path": "#source/js/main.js",
+      "imports": [
+        "#source/js/script.js"
+      ]
     }
   ],
   "projectView": {
