--- a/prepros-6.config
+++ b/prepros-6.config
@@ -42,10 +42,10 @@
   ],
   "fileTree": {
     "expandedDirs": [
-      "js",
       "#source",
       "#source/scss",
-      "css"
+      "css",
+      "js"
     ],
     "hideSystemFiles": true,
     "systemFiles": [
@@ -80,7 +80,7 @@
     {
       "path": "#source/js/main.js",
       "imports": [
-        "#source/js/script.js"
+        "#source/js/juery.js"
       ]
     }
   ],
